--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produtora Machine - Serviços Profissionais de Produção de Vídeo e Áudio</title>
-    <meta name="description" content="Transforme sua visão em uma experiência inesquecível. Produção profissional de vídeo, áudio, eventos ao vivo, shows e transmissões no Brasil. Equipamentos de última geração e equipe especializada." />
-    <meta name="keywords" content="produção de vídeo, produção de áudio, eventos ao vivo, vídeo corporativo, produção de shows, produtora Brasil, videoclipes, transmissões ao vivo, unidades móveis, iluminação cênica" />
+    <meta
+      name="description"
+      content="Transforme sua visão em uma experiência inesquecível. Produção profissional de vídeo, áudio, eventos ao vivo, shows e transmissões no Brasil. Equipamentos de última geração e equipe especializada."
+    />
+    <meta
+      name="keywords"
+      content="produção de vídeo, produção de áudio, eventos ao vivo, vídeo corporativo, produção de shows, produtora Brasil, videoclipes, transmissões ao vivo, unidades móveis, iluminação cênica"
+    />
     <meta name="author" content="Produtora Machine" />
 
     <meta property="og:title" content="Produtora Machine - Produção Profissional de Vídeo e Áudio" />
-    <meta property="og:description" content="Transforme sua visão em uma experiência inesquecível com nossos serviços profissionais de produção de vídeo e áudio." />
+    <meta
+      property="og:description"
+      content="Transforme sua visão em uma experiência inesquecível com nossos serviços profissionais de produção de vídeo e áudio."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
